[tool.poetry]
name = "agentic-hyperparameter-optimization"
version = "0.1.0"
description = ""
authors = ["sid-thephysicskid <siddabhinav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.11,<=3.13"
langchain = "^0.1.15"
crewai = "^0.28.7"
openai = "^1.17.0"
xgboost = "^2.0.3"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
